# wetext-rs

./: .gitignore  Cargo.toml  README.md
src/: config.rs  contractions.rs  error.rs  lib.rs  normalizer.rs  text_normalizer.rs  token_parser.rs
tests/: comparison_test.rs  generate_reference.py  integration_test.rs
